[project]
authors = [{name = "Peter Scicluna", email = "pscicluna@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "AdventOfCode2024"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adventofcode2024 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.0,<3.14"
numpy = ">=2.1.3,<3"
scipy = ">=1.14.1,<2"
matplotlib = ">=3.9.2,<4"
